tests/negative/Internal/issue3074.juvix
module issue3074;

type T := mkT;

fun {_ : T} : {A : Type} -> T := mkT;

x : T := fun@{A := T};
